crates/plotnik-tests/tests/04-emit/bytecode/anchors/exact_first_child_impossible.txt
Q = (function_declaration .! (identifier))
------------------ DIAGNOSTICS -------------------
error: with the exact anchor (`.!`), the first child of `function_declaration` must be `identifier`, but `function_declaration` begins with `"async"` or `"function"`
 --> query.ptk:1:6
  |
1 | Q = (function_declaration .! (identifier))
  |      ^^^^^^^^^^^^^^^^^^^^
  |
help: `.!` allows no syntax-tree node in its gap — not even an anonymous token or comment; the soft anchor `.` skips those: `(function_declaration . (identifier))`
